# HITECH_FORMS

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  ARCHITECTURE_DECISIONS.md  BACKUP_AND_RECOVERY.md  BENCHMARKS.md  BRANDING.md  CHANGELOG.md  CITATION.cff  CLA.md  CODESTYLE.md  COMMUNITY.md  COMPATIBILITY.md  CONFIGURATION.md  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  DATA_FLOW.md  DCO.md  DEPENDENCIES.md  DEPENDENCY_POLICY.md  DEPLOYMENT.md  DEPRECATIONS.md  Dockerfile  ENVIRONMENT.md  ENVIRONMENT_VARIABLES.md  FAQ.md  GOVERNANCE.md  INCIDENT_RESPONSE.md  MAINTAINERS.md  MIGRATIONS.md  MODULE_BOUNDARIES.md  Makefile  NOTICE  PERFORMANCE.md  PRIVACY.md  Procfile  QUALITY_STANDARDS.md  (+23 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  cla-check.yml  dependency-check.yml  docs-governor.yml  labels.yml  release.yml  security-scan.yml  stale.yml
assets/: README.md
cla/: CLA-CORPORATE.md  CLA-INDIVIDUAL.md
docs/: API.md  ARCHITECTURE.md  GOVERNANCE.md  GOVERNANCE_DOCS.md  KERNEL_CONTEXT.md  README.md  SECURITY.md
docs/adr/: 0000-template.md  0001-placeholder.md  0002-placeholder.md  0003-placeholder.md  0004-placeholder.md  0005-placeholder.md  0006-placeholder.md  0007-placeholder.md  0008-placeholder.md  0009-placeholder.md  0010-placeholder.md  README.md
docs/api/: AUTH.md  ENDPOINTS.md  ERRORS.md  EXAMPLES.md
docs/compliance/: ACCESS.md  AUDIT_NOTES.md  CONTROLS.md  INVENTORY.md  VENDORS.md
docs/design/: ACCESSIBILITY.md  BRAND.md  COMPONENT_TEMPLATE.md  MOTION.md  TOKENS.md
docs/dev/: BLOCK_WEBHOOKS_OBS_PLAN.md  DB_DRIFT_BLOCK_PLAN.md  DB_DRIFT_PLAYBOOK.md  FINAL_REPORT_BLOCK_DB_DRIFT.md  FINAL_REPORT_BLOCK_WEBHOOKS_OBS.md
docs/factory/: FACTORY_RUNTIME_EXPLAINED.md
docs/governance/: OWNERSHIP.md  REVIEW_PROCESS.md
docs/playbooks/: INCIDENT_PLAYBOOK.md  ONBOARDING.md  RELEASE_PLAYBOOK.md  (+1 more)
helm/: README.md
k8s/: README.md
logging/: README.md
migrations/: alembic.ini  env.py  script.py.mako
monitoring/: README.md
policies/: SECURITY_CONTACTS.md
scripts/: guard_migration_ownership.py  setup.ps1  setup.sh  snapshot_forms.ps1  snapshot_forms_full.ps1  snapshot_forms_validate.ps1
terraform/: README.md
tests/: conftest.py  helpers.py
tools/: bootstrap.ps1  init_wave1.py
(+148 files in other folders)
