[project]
name = "hitech-forms"
version = "0.1.0"
description = "HITECH_FORMS: Python-first forms.app-style system"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.41.0",
    "SQLAlchemy==2.0.46",
    "alembic==1.18.4",
    "Jinja2==3.1.6",
    "typer==0.24.0",
    "python-multipart==0.0.20",
]

[project.scripts]
hforms = "hitech_forms.ops.cli:main"
hforms-ci = "hitech_forms.ops.ci:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
pretty = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "hitech_forms.platform.*",
    "hitech_forms.db.*",
    "hitech_forms.services.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/hitech_forms"]
branch = true

[tool.coverage.report]
show_missing = true
